# DataSmartGovernBackend

./: .dockerignore  .env.application.example  .gitignore  README.md  docker-compose.application.yml  docker-compose.local-e2e.yml  docker-compose.yml  mvnw  pom.xml
python-ai-runtime/: README.md  pyproject.toml
python-ai-runtime/src/datasmart_ai_runtime/: __init__.py  api.py  api_a2a_task_planning.py  api_agent_routes.py  api_events.py  api_gateway_security.py  api_gateway_signature.py  api_intelligent_gateway.py  api_mcp_tool_call_intake.py  api_memory_materialization_admin.py  api_memory_runtime.py  api_memory_write.py  api_model_gateway.py  api_orchestrator_factory.py  api_plan_response.py  api_trusted_context.py  config.py  config_tool_registry.py
python-ai-runtime/src/datasmart_ai_runtime/api/: __init__.py  app.py  lifecycle.py  metrics.py  rag.py  runtime_event_replay_sources.py
python-ai-runtime/src/datasmart_ai_runtime/domain/: __init__.py  context.py  contracts.py  event_transport.py  events.py  intent.py  memory.py  model_gateway.py  resource_reference.py  skills.py
python-ai-runtime/src/datasmart_ai_runtime/services/: __init__.py  agent_control_plane_feedback.py  agent_follow_up_tool_planner.py  agent_loop_control_policy.py  agent_model_intent_node.py  agent_model_tool_feedback_turn.py  agent_orchestrator.py  agent_plan_ingestion_client.py  agent_plan_presentation.py  agent_runtime_event_feedback.py  agent_runtime_event_replay_client.py  agent_runtime_tool_execution_contracts.py  agent_runtime_tool_feedback_client.py  agent_runtime_tool_feedback_provider.py  agent_second_turn_events.py  agent_second_turn_orchestrator.py  agent_workspace.py  context_builder.py  context_micro_compactor.py  hybrid_context_builder.py  intent_analyzer.py  langgraph_multi_agent_collaboration.py  langgraph_planning_workflow.py  memory_materialization_receipt_store.py  memory_store.py  memory_store_retriever.py  memory_write_candidate_store.py  (+40 more)
python-ai-runtime/tests/: test_a2a_task_planning_adapter.py  test_a2a_task_planning_api.py  test_agent_capability_matrix.py  test_agent_control_plane_feedback.py  test_agent_conversation_response.py  test_agent_execution_closure.py  test_agent_execution_session_metrics_response.py  test_agent_follow_up_tool_planner.py  test_agent_graph_runtime_contract.py  test_agent_loop_control_policy.py  test_agent_model_intent_node_intake.py  test_agent_observation_timeline.py  test_agent_orchestrator.py  test_agent_orchestrator_model_gateway_events.py  test_agent_plan_ingestion_client.py  test_agent_profile_and_durable_loop_response.py  test_agent_request_contract.py  test_agent_runtime_event_feedback.py  test_agent_runtime_event_replay_client.py  test_agent_runtime_prometheus_rules.py  test_agent_runtime_tool_feedback_client.py  test_agent_second_turn_orchestrator.py  test_agent_session_scheduler.py  test_agent_turn_runner_metrics_response.py  test_agent_workspace.py  test_api_agent_routes_security.py  test_api_bootstrap.py  test_api_event_replay.py  test_api_gateway_security.py  test_api_response_integration.py  test_api_trusted_context.py  test_command_sandbox_process_runner.py  test_command_worker_lease.py  test_context_builder.py  test_context_micro_compactor.py  test_controlled_command_worker_runner.py  test_durable_agent_loop.py  test_durable_agent_loop_redis.py  test_durable_model_tool_loop_runner.py  test_hybrid_context_builder.py  (+120 more)
(+2541 files in other folders)
