[project]
name = "datasmart-ai-runtime"
version = "0.1.0"
description = "DataSmart Govern Python AI Runtime for model routing, agent orchestration and tool planning."
requires-python = ">=3.10"
authors = [{ name = "Cui" }]
dependencies = []

[project.optional-dependencies]
# API 依赖是可选项：核心 Agent/工具/记忆/模型网关单测不强制安装 FastAPI。
# 这里设置 `<1.0` 主版本上限，是为了避免未来 FastAPI/Uvicorn 进入 1.x 后出现破坏性启动行为；
# 同时运行时代码已通过 `api/lifecycle.py` 兼容当前较新的 FastAPI 0.138.x 生命周期 API。
api = ["fastapi>=0.110,<1.0", "uvicorn>=0.27,<1.0", "langgraph>=0.2,<2.0"]
# RAG / 向量数据库依赖单独成组，避免只做 Agent 规划或离线单测时强制拉起向量库 SDK。
# 生产部署若启用 Chroma similarity search，可安装：pip install -e "python-ai-runtime[rag]"
rag = ["chromadb>=0.5,<2.0"]
# Kafka 发布器是生产集成能力，不放入默认依赖，避免本地学习、离线规划和单元测试被消息中间件客户端绑定。
# 部署方如果启用 DATASMART_AI_RUNTIME_EVENT_PUBLISHER=kafka，可通过 `pip install -e python-ai-runtime[kafka]` 安装。
kafka = ["kafka-python>=2.0"]
# Redis 是生产可选能力：runtime event 多实例 replay/outbox、gateway 签名 nonce 去重等都会用到。
# 默认不安装，避免本地学习、离线规划和单元测试被外部中间件客户端绑定。
redis = ["redis>=5.0"]
# PostgreSQL / pgvector 是 AI Memory 的目标持久化方向。
# 这里使用 psycopg3，并单独作为可选 extra 暴露：本地离线单测仍可零数据库依赖运行，
# 容器或预生产环境需要启用 `ai_memory` schema 时再安装该 extra。
postgresql = ["psycopg[binary]>=3.2,<4.0"]
# MCP 官方 Python SDK 当前稳定线为 1.x；2.x 在 2026-07 仍是预发布并包含破坏性重构。
# 固定 `<2` 可以避免生产镜像在重新构建时无意跨大版本。SDK 仅由 services/tools/mcp/official_sdk.py
# 直接依赖，其他 Agent/ToolPlan 代码继续使用项目内部协议，便于未来受控升级。
mcp = ["mcp>=1.27,<2"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
